[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/enemies/goblin/goblin_run_anim_f2.png" type="Texture" id=1]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/enemies/goblin/goblin_idle_anim_f3.png" type="Texture" id=2]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/enemies/goblin/goblin_run_anim_f3.png" type="Texture" id=3]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/enemies/goblin/goblin_idle_anim_f0.png" type="Texture" id=4]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/enemies/goblin/goblin_idle_anim_f5.png" type="Texture" id=5]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/enemies/goblin/goblin_idle_anim_f4.png" type="Texture" id=6]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/enemies/goblin/goblin_run_anim_f0.png" type="Texture" id=7]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/enemies/goblin/goblin_idle_anim_f1.png" type="Texture" id=8]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/enemies/goblin/goblin_run_anim_f1.png" type="Texture" id=9]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/enemies/goblin/goblin_run_anim_f5.png" type="Texture" id=10]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/enemies/goblin/goblin_run_anim_f4.png" type="Texture" id=11]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/enemies/goblin/goblin_idle_anim_f2.png" type="Texture" id=12]
[ext_resource path="res://Scenes/Enemies/Goblin.gd" type="Script" id=13]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/enemies/goblin/goblin_knife.png" type="Texture" id=14]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/effects (new)/enemy_afterdead_explosion_anim_f1.png" type="Texture" id=15]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/effects (new)/enemy_afterdead_explosion_anim_f0.png" type="Texture" id=16]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/effects (new)/enemy_afterdead_explosion_anim_f3.png" type="Texture" id=17]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/effects (new)/enemy_afterdead_explosion_anim_f2.png" type="Texture" id=18]
[ext_resource path="res://Scenes/Enemies/Stats.tscn" type="PackedScene" id=19]
[ext_resource path="res://assets/Sound Effects/Gun.wav" type="AudioStream" id=20]
[ext_resource path="res://assets/Sound Effects/Explosion.wav" type="AudioStream" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 15 ), ExtResource( 18 ), ExtResource( 17 ) ],
"loop": true,
"name": "death",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "death"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "hurt"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.933333, 0.164706, 0.164706, 1 ), Color( 0.94902, 0.556863, 0.556863, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("hurt")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -0.755 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.08 ), Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5.5, 3.5 )

[sub_resource type="CircleShape2D" id=9]
radius = 5.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6.25, 4 )

[node name="Goblin" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 0
script = ExtResource( 13 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
speed_scale = 2.0

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
animation = "death"
speed_scale = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.5
anims/RESET = SubResource( 3 )
anims/death = SubResource( 7 )
anims/hurt = SubResource( 6 )
anims/spawn = SubResource( 2 )

[node name="hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 20 )

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 3.5 )
shape = SubResource( 4 )

[node name="SwordG" type="Area2D" parent="."]
show_behind_parent = true
position = Vector2( 1, 0 )
collision_layer = 0

[node name="Sprite" type="Sprite" parent="SwordG"]
position = Vector2( 8, 0 )
texture = ExtResource( 14 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 9 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0.5, 4 )
shape = SubResource( 5 )

[node name="Stats" parent="." instance=ExtResource( 19 )]
max_health = 4

[connection signal="animation_finished" from="AnimatedSprite2" to="." method="_on_AnimatedSprite2_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
